# llm_efficiency

./: README.md  pyproject.toml  test_and_submit.sh
kv_cache/: benchmark.py  demo_sort_kv.py  kv_cache.md  kv_cache.py
lora/: demo_sort_lora.py  lora.md  lora.py
mingpt/: model.py  trainer.py
practicals/: KV_cache_empty.ipynb  Lora_empty.ipynb
tests/: test_kv_cache.py  test_lora.py
