[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-efficiency"
version = "0.1.0"
description = "LLM efficiency experiments (mingpt, KV cache, LoRA)"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "numpy",
    "transformers",
]

[project.optional-dependencies]
pretrained = []
notebook = [
    "jupyter",
]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["mingpt", "kv_cache", "lora"]
